# cyber-companion

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONVERSATION_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  auto_test.py  import_chat.py  import_exskill.py  install.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_wechat.py  setup_wizard.py  start.bat  start.sh  test_cli_automation.py
.hermes/: test-plan.md
adapters/: __init__.py  api.py  base.py  cli.py  debounce.py  manager.py  wechat.py
config/: mcp_servers.example.json  mcp_servers.json  persona_tags.json  personas.example.json  personas.json  settings.example.json  settings.json
core/: __init__.py  app.py  config.py  identity.py  open_loop.py  proactive.py  provider_models.py  summary.py  utils.py
docs/: FRAMEWORK_REPORT.md  PROJECT_STATUS_REPORT.md  RETROSPECTIVE.md  SISYPHUS_MEMORY.md
mcp_servers/: __init__.py  framing.py  notes_server.py  system_tools.py  weather.py  web_fetch.py
plugins/: __init__.py  base.py  example_game.py  manager.py
tests/: test_affection_fallback.py  test_affection_llm_parse.py  test_affection_mapper.py  test_affection_migration.py  test_affection_pipeline.py  test_affection_storage.py  test_async_stability_regressions.py  test_brain.py  test_brain_edge.py  test_cache_regressions.py  test_core.py  test_integration_connectivity.py  test_mcp_server_regressions.py  test_persona.py  test_remaining_stability_regressions.py  test_stability.py  test_stress_300_conversations.py  test_v12_features.py  test_v13_features.py  (+1 more)
(+138 files in other folders)
